<resources>
    <string name="app_name">My Timesheets</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_authentication">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="saggezza_brand_image">Saggezza Logo</string>
    <string name="get_started">Get Started!</string>
    <string name="entry_on">Entry On</string>
    <string name="project_name">Project Name</string>
    <string name="mock_week_range">01/01 – 01/05</string>
    <string name="others">Others</string>
    <string name="badges">Badges</string>
    <string name="txtAchievements">Achievements</string>
    <string name="txtLevel">Level 1 - Engager</string>
    <string name="txtName">Emanuel Gheorghe</string>
    <string name="todo">TODO</string>
    <string name="my_timesheets">My Timesheets</string>
    <string name="label_projectDropdown">Select Project</string>
    <string name="label_taskDropdown">Select Task</string>
    <string name="mock_date">01/01/2021</string>
    <string name="hours">40</string>
    <string name="txtSubmitButton">Submit</string>
    <string name="dash_dateRange">-</string>
    <string name="hint_dateRange">Select Date Range</string>
    <string name="hint_Hours">Enter Hours</string>
    <string name="_index">1.</string>
    <string name="test_LongEmail">testverylongemail2020@gmail.com</string>
    <string name="_testScore">1234</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="strWelcome">Welcome!</string>
    <string name="press_to_add_a_timesheet">Press + to add a timesheet</string>
    <!-- <string name="default_web_client_id">386782255131-k78oci6tpmcfdn2h0ms6e33q4a0e16mf.apps.googleusercontent.com</string>
 -->
</resources>