<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.emanuelg.saggezza.ui.MyTimesheets.MyTimesheetsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_my_timesheets" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.emanuelg.saggezza.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.emanuelg.saggezza.ui.SubmitTimesheet.SubmitTimesheet"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_submit_timesheet" />
</navigation>