<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".AddTimesheetActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator_AddTimesheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_projectDropdown"
            android:inputType="none"
            app:errorEnabled="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="?android:textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownTask"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_taskDropdown"
            android:inputType="none"
            app:errorEnabled="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="?android:textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        app:errorEnabled="true"
        android:focusable="false"
        app:endIconMode="clear_text"
        android:importantForAutofill="no"
        android:inputType="none"
        android:longClickable="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDateRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Select Date Range"
            android:focusable="false"
            app:errorEnabled="true"
            android:hint="@string/hint_dateRange"
            android:longClickable="false"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="?android:attr/textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="10dp"
        app:errorEnabled="true"
        android:autofillHints="Enter Hours"
        android:hint="@string/hint_Hours"
        android:textColor="?android:attr/textColorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:background="@color/SaggezzaGreen"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/txtSubmitButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?android:attr/textColorPrimary"
        android:visibility="gone"
        app:cornerRadius="24dp"
        app:rippleColor="@color/SaggezzaGreen"
        tools:text="Submit"
        tools:visibility="gone" />


</FrameLayout>